c/api/nasl.h

enum node_type {
    NODE_EMPTY = 0,
    NODE_IF_ELSE,                 /* [0] = cond, [1] = if_block, [2] = else_block */
    NODE_INSTR_L,                 /* Block. [0] = first instr, [1] = tail */
    NODE_FOR,                     /* [0] = start expr, [1] = cond, [2] = end_expr, [3] = block */
    NODE_WHILE,                   /* [0] = cond, [1] = block */
    NODE_FOREACH,
    NODE_REPEAT_UNTIL,
    NODE_REPEATED,                /* [0] = func call, [1] = repeat nb */
    NODE_FUN_DEF,                 /* [0] = argdecl, [1] = block */
    NODE_FUN_CALL,                /* [0] = script_infos */
    NODE_DECL,                    /* [0] = next arg in list */
    NODE_ARG,                     /* val = name can be NULL, [0] = val, [1] = next arg */
    NODE_RETURN,                  /* ret val */
    NODE_BREAK,
    NODE_CONTINUE,

    NODE_ARRAY_EL,                /* val = array name, [0] = index */
    NODE_AFF,                     /* [0] = lvalue, [1] = rvalue */
    NODE_VAR,                     /* val = variable name */
    NODE_LOCAL,                   /* [0] = argdecl */
    NODE_GLOBAL,

    NODE_PLUS_EQ,
    NODE_MINUS_EQ,
    NODE_MULT_EQ,
    NODE_DIV_EQ,
    NODE_MODULO_EQ,

    NODE_L_SHIFT_EQ,
    NODE_R_SHIFT_EQ,
    NODE_R_USHIFT_EQ,

    EXPR_AND,
    EXPR_OR,
    EXPR_NOT,

    EXPR_PLUS,
    EXPR_MINUS,
    EXPR_U_MINUS,
    EXPR_MULT,
    EXPR_DIV,
    EXPR_MODULO,
    EXPR_EXPO,

    EXPR_BIT_AND,
    EXPR_BIT_OR,
    EXPR_BIT_XOR,
    EXPR_BIT_NOT,
    EXPR_INCR,
    EXPR_DECR,
    EXPR_L_SHIFT,
    EXPR_R_SHIFT,
    EXPR_R_USHIFT,

    COMP_MATCH,
    COMP_NOMATCH,
    COMP_RE_MATCH,
    COMP_RE_NOMATCH,

    COMP_LT,
    COMP_LE,
    COMP_EQ,
    COMP_NE,
    COMP_GT,
    COMP_GE,

    CONST_INT,
    CONST_STR,                    /* "impure" string */

    CONST_DATA,                   /* binary data / "pure" string */
    CONST_REGEX,                  /* Compiled regex */

    ARRAY_ELEM,                   /* val = char index or NULL if integer,
                                 * [0] = value, [1] = next element */
    /* For exec only */
    REF_VAR,
    REF_ARRAY,
    DYN_ARRAY
};
typedef struct TC {
    short type;
    short line_nb;
    short ref_count;              /* Cell is freed when count reaches zero */
    int size;
    union {
        char *str_val;
        long int i_val;
        void *ref_val;            /* internal reference */
    } x;
    struct TC *link[4];
} tree_cell;
enum {
    VAR2_UNDEF = 0,
    VAR2_INT,
    VAR2_STRING,
    VAR2_DATA,
    VAR2_ARRAY
};
typedef struct st_nasl_string {
    unsigned char *s_val;
    int s_siz;
} nasl_string_t;
struct st_a_nasl_var;
typedef struct st_nasl_array {
    int max_idx;                  /* max index - 1! */
    struct st_a_nasl_var **num_elt;       /* max_idx elements */
    struct st_n_nasl_var **hash_elt;      /* VAR_NAME_HASH elements */
} nasl_array;
typedef struct st_a_nasl_var {
    int var_type;
    #ifdef ALL_VARIABLES_NAMED
    char *av_name;
    #endif
    union {
        nasl_string_t v_str;        /* character string / data */
        long int v_int;             /* integer */
        nasl_array v_arr;           /* array */
    } v;
} anon_nasl_var;
typedef struct st_n_nasl_var {
    struct st_a_nasl_var u;
    #ifndef ALL_VARIABLES_NAMED
    char *var_name;
    #else
    #define var_name  u.av_name
    #endif
    struct st_n_nasl_var *next_var;       /* next variable with same name hash */
} named_nasl_var;
typedef struct {
    nasl_array *a;                /* array */
    int i1;                       /* index of numbered elements */
    int iH;                       /* index of hash */
    named_nasl_var *v;            /* current variable in hash */
} nasl_iterator;
// Type for a built-in nasl function.
typedef struct st_nasl_func {
    char *func_name;
    void *block;                  /* Can be pointer to a C function! */
} nasl_func;
// Lex
typedef struct struct_lex_ctxt {
    struct struct_lex_ctxt *up_ctxt;
    tree_cell *ret_val;           /* return value or exit flag */
    unsigned fct_ctxt:1;          /* This is a function context */
    unsigned break_flag:1;        /* Break from loop */
    unsigned cont_flag:1;         /* Next iteration in loop */
    unsigned always_signed:1;
    struct script_infos *script_infos;
    const char *oid;
    int recv_timeout;
    int line_nb;
    /* Named variables hash set + anonymous variables array */
    nasl_array ctx_vars;
    /* Functions hash table */
    GHashTable *functions;
} lex_ctxt;
// tree_cell *cell2atom (lex_ctxt *, tree_cell *);



typedef struct {
    int line_nb;
    int always_signed;
    int index;
    tree_cell *tree;
    char *buffer;
    kb_t kb;
} naslctxt;
struct scan_globals {
  char *network_targets;
  char *network_scan_status;
  GHashTable *files_translation;
  GHashTable *files_size_translation;
  int global_socket;
  char *scan_id;
};
struct host_info;
struct script_infos {
  struct scan_globals *globals;
  kb_t key;
  nvti_t *nvti;
  char *oid;
  char *name;
  GHashTable *udp_data;
  struct in6_addr *ip;
  GSList *vhosts;
  int standalone;
  int denial_port;
  int alive;
};
tree_cell *network_targets (lex_ctxt *);