nasl-sys/src/ast.rs

use crate::{ __BindgenBitfieldUnit, __IncompleteArrayField, };
use crate::{ gchar, gint, guint, };
use crate::kb::kb_t;
use crate::nvti::nvti_t;
use crate::libc::{ c_void, c_char, c_uchar, c_int, c_uint, c_short, c_long, in6_addr, in_addr, };
use crate::glib_sys::{ GHashTable, GList, GSList, };


pub type node_type = c_uint;

pub const NODE_EMPTY: node_type = 0;
pub const NODE_IF_ELSE: node_type = 1;
pub const NODE_INSTR_L: node_type = 2;
pub const NODE_FOR: node_type = 3;
pub const NODE_WHILE: node_type = 4;
pub const NODE_FOREACH: node_type = 5;
pub const NODE_REPEAT_UNTIL: node_type = 6;
pub const NODE_REPEATED: node_type = 7;
pub const NODE_FUN_DEF: node_type = 8;
pub const NODE_FUN_CALL: node_type = 9;
pub const NODE_DECL: node_type = 10;
pub const NODE_ARG: node_type = 11;
pub const NODE_RETURN: node_type = 12;
pub const NODE_BREAK: node_type = 13;
pub const NODE_CONTINUE: node_type = 14;
pub const NODE_ARRAY_EL: node_type = 15;
pub const NODE_AFF: node_type = 16;
pub const NODE_VAR: node_type = 17;
pub const NODE_LOCAL: node_type = 18;
pub const NODE_GLOBAL: node_type = 19;
pub const NODE_PLUS_EQ: node_type = 20;
pub const NODE_MINUS_EQ: node_type = 21;
pub const NODE_MULT_EQ: node_type = 22;
pub const NODE_DIV_EQ: node_type = 23;
pub const NODE_MODULO_EQ: node_type = 24;
pub const NODE_L_SHIFT_EQ: node_type = 25;
pub const NODE_R_SHIFT_EQ: node_type = 26;
pub const NODE_R_USHIFT_EQ: node_type = 27;
pub const EXPR_AND: node_type = 28;
pub const EXPR_OR: node_type = 29;
pub const EXPR_NOT: node_type = 30;
pub const EXPR_PLUS: node_type = 31;
pub const EXPR_MINUS: node_type = 32;
pub const EXPR_U_MINUS: node_type = 33;
pub const EXPR_MULT: node_type = 34;
pub const EXPR_DIV: node_type = 35;
pub const EXPR_MODULO: node_type = 36;
pub const EXPR_EXPO: node_type = 37;
pub const EXPR_BIT_AND: node_type = 38;
pub const EXPR_BIT_OR: node_type = 39;
pub const EXPR_BIT_XOR: node_type = 40;
pub const EXPR_BIT_NOT: node_type = 41;
pub const EXPR_INCR: node_type = 42;
pub const EXPR_DECR: node_type = 43;
pub const EXPR_L_SHIFT: node_type = 44;
pub const EXPR_R_SHIFT: node_type = 45;
pub const EXPR_R_USHIFT: node_type = 46;
pub const COMP_MATCH: node_type = 47;
pub const COMP_NOMATCH: node_type = 48;
pub const COMP_RE_MATCH: node_type = 49;
pub const COMP_RE_NOMATCH: node_type = 50;
pub const COMP_LT: node_type = 51;
pub const COMP_LE: node_type = 52;
pub const COMP_EQ: node_type = 53;
pub const COMP_NE: node_type = 54;
pub const COMP_GT: node_type = 55;
pub const COMP_GE: node_type = 56;
pub const CONST_INT: node_type = 57;
pub const CONST_STR: node_type = 58;
pub const CONST_DATA: node_type = 59;
pub const CONST_REGEX: node_type = 60;
pub const ARRAY_ELEM: node_type = 61;
pub const REF_VAR: node_type = 62;
pub const REF_ARRAY: node_type = 63;
pub const DYN_ARRAY: node_type = 64;


// exec_nasl_script modes
pub const NASL_EXEC_DESCR: c_int      = 1 << 0;
pub const NASL_EXEC_PARSE_ONLY: c_int = 1 << 1;
pub const NASL_ALWAYS_SIGNED: c_int   = 1 << 2;
pub const NASL_COMMAND_LINE: c_int    = 1 << 3;
pub const NASL_LINT: c_int            = 1 << 4;

pub const NASL_ERR_NOERR: c_int      = 0;
pub const NASL_ERR_ETIMEDOUT: c_int  = 1;
pub const NASL_ERR_ECONNRESET: c_int = 2;
pub const NASL_ERR_EUNREACH: c_int   = 3;
pub const NASL_ERR_EUNKNOWN: c_int   = 99;


#[repr(C)]
#[derive(Copy, Clone)]
pub struct TC {
    pub type_: c_short,
    pub line_nb: c_short,
    pub ref_count: c_short,
    pub size: c_int,
    pub x: TC__bindgen_ty_1,
    pub link: [*mut TC; 4usize],
}
pub type tree_cell = TC;


#[repr(C)]
#[derive(Copy, Clone)]
pub union TC__bindgen_ty_1 {
    pub str_val: *mut c_char,
    pub i_val: c_long,
    pub ref_val: *mut c_void,
    _bindgen_union_align: u64,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_nasl_string {
    pub s_val: *mut c_uchar,
    pub s_siz: c_int,
}

pub type nasl_string_t = st_nasl_string;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_nasl_array {
    pub max_idx: c_int,
    pub num_elt: *mut *mut st_a_nasl_var,
    pub hash_elt: *mut *mut st_n_nasl_var,
}

pub type nasl_array = st_nasl_array;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct struct_lex_ctxt {
    pub up_ctxt: *mut struct_lex_ctxt,
    pub ret_val: *mut tree_cell,
    pub _bitfield_1: __BindgenBitfieldUnit<[u8; 1usize], u8>,
    pub script_infos: *mut script_infos,
    pub oid: *const c_char,
    pub recv_timeout: c_int,
    pub line_nb: c_int,
    pub ctx_vars: nasl_array,
    pub functions: *mut GHashTable,
}

impl struct_lex_ctxt {
    #[inline]
    pub fn fct_ctxt(&self) -> c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(0usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_fct_ctxt(&mut self, val: c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(0usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn break_flag(&self) -> c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(1usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_break_flag(&mut self, val: c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(1usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn cont_flag(&self) -> c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(2usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_cont_flag(&mut self, val: c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(2usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn always_signed(&self) -> c_uint {
        unsafe { ::std::mem::transmute(self._bitfield_1.get(3usize, 1u8) as u32) }
    }
    #[inline]
    pub fn set_always_signed(&mut self, val: c_uint) {
        unsafe {
            let val: u32 = ::std::mem::transmute(val);
            self._bitfield_1.set(3usize, 1u8, val as u64)
        }
    }
    #[inline]
    pub fn new_bitfield_1(
        fct_ctxt: c_uint,
        break_flag: c_uint,
        cont_flag: c_uint,
        always_signed: c_uint,
    ) -> __BindgenBitfieldUnit<[u8; 1usize], u8> {
        let mut __bindgen_bitfield_unit: __BindgenBitfieldUnit<[u8; 1usize], u8> =
            Default::default();
        __bindgen_bitfield_unit.set(0usize, 1u8, {
            let fct_ctxt: u32 = unsafe { ::std::mem::transmute(fct_ctxt) };
            fct_ctxt as u64
        });
        __bindgen_bitfield_unit.set(1usize, 1u8, {
            let break_flag: u32 = unsafe { ::std::mem::transmute(break_flag) };
            break_flag as u64
        });
        __bindgen_bitfield_unit.set(2usize, 1u8, {
            let cont_flag: u32 = unsafe { ::std::mem::transmute(cont_flag) };
            cont_flag as u64
        });
        __bindgen_bitfield_unit.set(3usize, 1u8, {
            let always_signed: u32 = unsafe { ::std::mem::transmute(always_signed) };
            always_signed as u64
        });
        __bindgen_bitfield_unit
    }
}

pub type lex_ctxt = struct_lex_ctxt;


pub type _bindgen_ty_2 = c_uint;

pub const VAR2_UNDEF: _bindgen_ty_2 = 0;
pub const VAR2_INT: _bindgen_ty_2 = 1;
pub const VAR2_STRING: _bindgen_ty_2 = 2;
pub const VAR2_DATA: _bindgen_ty_2 = 3;
pub const VAR2_ARRAY: _bindgen_ty_2 = 4;


#[repr(C)]
#[derive(Copy, Clone)]
pub struct st_a_nasl_var {
    pub var_type: c_int,
    pub v: st_a_nasl_var__bindgen_ty_1,
}

#[repr(C)]
#[derive(Copy, Clone)]
pub union st_a_nasl_var__bindgen_ty_1 {
    pub v_str: nasl_string_t,
    pub v_int: c_long,
    pub v_arr: nasl_array,
    _bindgen_union_align: [u64; 3usize],
}

pub type anon_nasl_var = st_a_nasl_var;

#[repr(C)]
#[derive(Copy, Clone)]
pub struct st_n_nasl_var {
    pub u: st_a_nasl_var,
    pub var_name: *mut c_char,
    pub next_var: *mut st_n_nasl_var,
}

pub type named_nasl_var = st_n_nasl_var;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nasl_iterator {
    pub a: *mut nasl_array,
    pub i1: c_int,
    pub iH: c_int,
    pub v: *mut named_nasl_var,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct st_nasl_func {
    pub func_name: *mut c_char,
    pub block: *mut c_void,
}

pub type nasl_func = st_nasl_func;

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct naslctxt {
    pub line_nb: c_int,
    pub always_signed: c_int,
    pub index: c_int,
    pub tree: *mut tree_cell,
    pub buffer: *mut c_char,
    pub kb: kb_t,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct scan_globals {
    pub network_targets: *mut c_char,
    pub network_scan_status: *mut c_char,
    pub files_translation: *mut GHashTable,
    pub files_size_translation: *mut GHashTable,
    pub global_socket: c_int,
    pub scan_id: *mut c_char,
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct host_info {
    _unused: [u8; 0],
}

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct script_infos {
    pub globals: *mut scan_globals,
    pub key: kb_t,
    pub nvti: *mut nvti_t,
    pub oid: *mut c_char,
    pub name: *mut c_char,
    pub udp_data: *mut GHashTable,
    pub ip: *mut in6_addr,
    pub vhosts: *mut GSList,
    pub standalone: c_int,
    pub denial_port: c_int,
    pub alive: c_int,
}


